--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+build-storybook.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -36,3 +38,6 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# storybook
+/storybook-static
