removed babelconfig and ts file

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-interactions": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
+    "@storybook/core-common": "^6.4.19",
     "@storybook/react": "^6.4.19",
     "@storybook/testing-library": "^0.0.9",
     "@testing-library/jest-dom": "^5.16.3",
@@ -42,6 +43,8 @@
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.3",
     "chromatic": "^6.5.3",
+    "esbuild": "^0.14.27",
+    "esbuild-register": "^3.3.2",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "eslint-plugin-storybook": "^0.5.7",
