--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "chromatic"
+    "chromatic": "chromatic --exit-once-uploaded"
   },
   "dependencies": {
     "next": "12.1.0",
