--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
-    "styled-component": "^2.8.0"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
